unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/pse__Timecard_Entry_UI_Personal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Timecard Entry UI Personal</label>
</CustomObject>