unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Additional_Fields__c.field-meta.xml
<CustomField>
    <fullName>pse__Additional_Fields__c</fullName>
    <label>Additional Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>