unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Allow_Zero_Entry__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Zero_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, users are able to save task time records with zero hours. The default value is false.</description>
    <inlineHelpText>If selected, when users change the total task hours from a non zero value to zero on the Time Entry page, the timecard value is updated to zero. To use this setting, you must set Task Time Entry Mode to Calculated. The default value is false.</inlineHelpText>
    <label>Allow Zero Entry</label>
    <type>Checkbox</type>
</CustomField>