unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Assignment_project_editable_after_save__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_project_editable_after_save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true the project or assignment can be changed as long as the timecard 's status is one of the "timecard-edit-status-values/Timecard_edit_status_values__c" values.</description>
    <inlineHelpText>If true the project or assignment can be changed as long as the timecard 's status is one of the "timecard-edit-status-values/Timecard_edit_status_values__c" values.</inlineHelpText>
    <label>Assignment project editable after save</label>
    <type>Checkbox</type>
</CustomField>