unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Assignment_tooltip_fields__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_tooltip_fields__c</fullName>
    <defaultValue>"Percent_Allocated__c, Description__c,CreatedDate"</defaultValue>
    <description>The fields to use as tooltip for assignments. Fully-qualified (with namespace if applicable), case-sensitive field names are required</description>
    <inlineHelpText>The fields to use as tooltip for assignments. Fully-qualified (with namespace if applicable), case-sensitive field names are required</inlineHelpText>
    <label>Assignment tooltip fields</label>
    <length>60</length>
    <type>Text</type>
</CustomField>