unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Copy_Hours_From_Previous_Week__c.field-meta.xml
<CustomField>
    <fullName>pse__Copy_Hours_From_Previous_Week__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked Hour fields like Monday Hours, Tuesday Hours etc  will be copied from previous week timecards</description>
    <inlineHelpText>If checked Hour fields like Monday Hours, Tuesday Hours etc  will be copied from previous week timecards</inlineHelpText>
    <label>Copy Hours From Previous Week</label>
    <type>Checkbox</type>
</CustomField>