unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Copy_Milestone_From_Previous_Week__c.field-meta.xml
<CustomField>
    <fullName>pse__Copy_Milestone_From_Previous_Week__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked Milestones will be copied from previous week's timecards</description>
    <inlineHelpText>If checked Milestones will be copied from previous week's timecards</inlineHelpText>
    <label>Copy Milestone From Previous Week</label>
    <type>Checkbox</type>
</CustomField>