unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Copy_Schedule_Assignment_Daily_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Copy_Schedule_Assignment_Daily_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, the Copy From Schedule functionality populates the Notes fields for each day on the Timecard if it finds Assignment Daily Notes child records on the Assignment for that day. (default false)</description>
    <inlineHelpText>If set to true, the Copy From Schedule functionality populates the Notes fields for each day on the Timecard if it finds Assignment Daily Notes child records on the Assignment for that day. (default false)</inlineHelpText>
    <label>Copy Schedule Assignment Daily Notes</label>
    <type>Checkbox</type>
</CustomField>