unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Default_billable__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, billable drop down field on timecard ui will be shown as disabled i.e non-editable by user .</description>
    <inlineHelpText>If true, billable drop down field on timecard ui will be shown as disabled i.e non-editable by user .</inlineHelpText>
    <label>Default billable</label>
    <type>Checkbox</type>
</CustomField>