unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Default_Single_Resource_Search_Result__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Single_Resource_Search_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true and the Resource Lookup popup on the new timecard UI returns only one result, the Resource Lookup popup is automatically closed and the resource field is set to returned resource.</description>
    <inlineHelpText>When true and the Resource Lookup popup on the new timecard UI returns only one result, the Resource Lookup popup is automatically closed and the resource field is set to returned resource.</inlineHelpText>
    <label>Default Single Resource Search Result</label>
    <type>Checkbox</type>
</CustomField>