unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Disable_cache__c.field-meta.xml
<CustomField>
    <fullName>pse__Disable_cache__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TC UI cache the all assigned assignments/project along with the milestones while it loads. This may lead to salesforce's viewstate limit, if user have many assignments/projects. Setting this config value to true will minimize this cache.</description>
    <inlineHelpText>TC UI cache the all assigned assignments/project along with the milestones while it loads. This may lead to salesforce's viewstate limit, if user have many assignments/projects. Setting this config value to true will minimize this cache.</inlineHelpText>
    <label>Disable cache</label>
    <type>Checkbox</type>
</CustomField>