unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Empty_timecard_lines_to_append_by_def__c.field-meta.xml
<CustomField>
    <fullName>pse__Empty_timecard_lines_to_append_by_def__c</fullName>
    <defaultValue>5</defaultValue>
    <description>This is the minimum no of lines that will be always available for new timecard entry.</description>
    <inlineHelpText>This is the minimum no of lines that will be always available for new timecard entry.</inlineHelpText>
    <label>Empty timecard lines to append by def</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>