unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Hide_Billable_Column__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Billable_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the billable column on the Timecard Entry page is hidden. When true, the column is hidden and the billable checkbox defaults to selected. The default value is false.</description>
    <inlineHelpText>Indicates whether the billable column on the Timecard Entry page is hidden. When true, the column is hidden and the billable checkbox defaults to selected. The default value is false.</inlineHelpText>
    <label>Hide Billable Column</label>
    <type>Checkbox</type>
</CustomField>