unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Hide_Copy_From_Previous_Week_Button__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Copy_From_Previous_Week_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Copy From Previous Week button on the new timecard UI is hidden. The default value is false.</description>
    <inlineHelpText>Indicates whether the Copy From Previous Week button on the new timecard UI is hidden. The default value is false.</inlineHelpText>
    <label>Hide Copy From Previous Week Button</label>
    <type>Checkbox</type>
</CustomField>