unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Hide_Expand_Tasks__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Expand_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Expand Tasks or Collapse Tasks link is hidden in the Time Entry page. The default value is false.</description>
    <inlineHelpText>When true, the Expand Tasks or Collapse Tasks link is hidden in the Time Entry page. The default value is false.</inlineHelpText>
    <label>Hide Expand Tasks</label>
    <type>Checkbox</type>
</CustomField>