unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Hide_Notes_Column__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Notes_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Notes column that normally appears on the Timecard Entry page is hidden. The default value is false.</description>
    <inlineHelpText>When true, the Notes column that normally appears on the Timecard Entry page is hidden. The default value is false.</inlineHelpText>
    <label>Hide Notes Column</label>
    <type>Checkbox</type>
</CustomField>