unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Hide_Save_Button__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Save_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Save button on the new timecard UI is hidden. The default value is false.</description>
    <inlineHelpText>Indicates whether the Save button on the new timecard UI is hidden. The default value is false.</inlineHelpText>
    <label>Hide Save Button</label>
    <type>Checkbox</type>
</CustomField>