unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Hide_Timecard_Hours_in_Calculated_Mode__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Timecard_Hours_in_Calculated_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected and Task Time Entry Mode is set to Calculated, the timecard hours cannot be changed. Only the task hours can be edited. The default value of the checkbox is clear.</description>
    <inlineHelpText>If selected and Task Time Entry Mode is set to Calculated,  only one row of task hours is displayed. The default value of the checkbox is clear.</inlineHelpText>
    <label>Lock Timecard Hours in Calculated Mode</label>
    <type>Checkbox</type>
</CustomField>