unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Hide_View_Edit_Details_Link__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_View_Edit_Details_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true and Task Time Entry Mode is Current, the View or Edit Details links shown when hovering over a timecard line are hidden. If true and Task Time Entry Mode is not Current, the Notes tab is hidden on the links. The default value is false.</description>
    <inlineHelpText>If true and Task Time Entry Mode is Current, the View or Edit Details links shown when hovering over a timecard line are hidden. If true and Task Time Entry Mode is not Current, the Notes tab is hidden on the links. The default value is false</inlineHelpText>
    <label>Hide View Edit Details Link</label>
    <type>Checkbox</type>
</CustomField>