unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Holiday_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>pse__Holiday_Color_Code__c</fullName>
    <description>The given field/config is used to color-code the date-column-heading for a Work Calendar Holiday for the selected Resource on the Timecard. Config would allow customer to choose color so that they could, for example, have the date column heading "Mon (9/5)" be an alternate color (config could contain color). In this example, Mon. Sept. 5th 2011 is Labor Day, a holiday in most US Work Calendars, so a Resource with the US Work Calendar would see this color feature.</description>
    <inlineHelpText>The given field/config is used to color-code the date-column-heading for a Work Calendar Holiday for the selected Resource on the Timecard UI.</inlineHelpText>
    <label>Holiday Color Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>