unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Hours_cell_pixel_width__c.field-meta.xml
<CustomField>
    <fullName>pse__Hours_cell_pixel_width__c</fullName>
    <defaultValue>65</defaultValue>
    <inlineHelpText>Determines the pixel width of timecard hours cells in the Timecard V15 Entry page.</inlineHelpText>
    <label>Hours Cell Pixel Width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>