unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Max_Resource_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>pse__Max_Resource_Hours_Per_Day__c</fullName>
    <description>Maximum number of hours a resource can enter on a single timecard day. If the total number of hours for a resource exceeds this amount on a single timecard day, an error message is displayed.</description>
    <inlineHelpText>Maximum number of hours a resource can enter on a single timecard day. If the total number of hours for a resource exceeds this amount on a single timecard day, an error message is displayed.</inlineHelpText>
    <label>Max Resource Hours Per Day</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>