unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Maximum_Resource_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>pse__Maximum_Resource_Hours_Per_Week__c</fullName>
    <description>Maximum number of hours a resource can enter for a timecard week. If exceeded, an error message is displayed. Enter a percentage value and symbol, eg. 90%, to specify a maximum percentage of work calendar hours.</description>
    <inlineHelpText>Maximum number of hours a resource can enter for a timecard week. If exceeded, an error message is displayed. Enter a percentage value and symbol, eg. 90%, to specify a maximum percentage of work calendar hours.</inlineHelpText>
    <label>Maximum Resource Hours Per Week</label>
    <length>10</length>
    <type>Text</type>
</CustomField>