unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Methodology_field_position_is_popup__c.field-meta.xml
<CustomField>
    <fullName>pse__Methodology_field_position_is_popup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This config flag determines whether methodology field should be display on notes popup or at front page.</description>
    <inlineHelpText>This config flag determines whether methodology field should be display on notes popup or at front page.</inlineHelpText>
    <label>Methodology field position is popup</label>
    <type>Checkbox</type>
</CustomField>