unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Nickname_Editable__c.field-meta.xml
<CustomField>
    <fullName>pse__Nickname_Editable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true then assignment nickname is editable else not.</description>
    <inlineHelpText>If true then assignment nickname is editable else not.</inlineHelpText>
    <label>Nickname Editable</label>
    <type>Checkbox</type>
</CustomField>