unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Phase_Header_Field_Position_Is_Left__c.field-meta.xml
<CustomField>
    <fullName>pse__Phase_Header_Field_Position_Is_Left__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Phase field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</description>
    <inlineHelpText>If the Phase field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</inlineHelpText>
    <label>Phase Header Field Position Is Left</label>
    <type>Checkbox</type>
</CustomField>