unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Pre_Populate_Task__c.field-meta.xml
<CustomField>
    <fullName>pse__Pre_Populate_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, tasks are pre populated for the selected user and project. The default value of the checkbox is clear.</description>
    <inlineHelpText>If selected, tasks are pre populated for the selected user and project. The default value of the checkbox is clear.</inlineHelpText>
    <label>Pre Populate Task</label>
    <type>Checkbox</type>
</CustomField>