unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Primary_Location_field_position_is_popup__c.field-meta.xml
<CustomField>
    <fullName>pse__Primary_Location_field_position_is_popup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When Note primary location allowed is set to true, determines whether the Primary Location field appears in the Notes section or the timecard line.</description>
    <inlineHelpText>When Note primary location allowed is set to true, determines whether the Primary Location field appears in the Notes section or the timecard line.</inlineHelpText>
    <label>Primary Location field position is popup</label>
    <type>Checkbox</type>
</CustomField>