unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Proj_assig_dropdown_account_custom_field__c.field-meta.xml
<CustomField>
    <fullName>pse__Proj_assig_dropdown_account_custom_field__c</fullName>
    <description>timecard project/Assignment account drop down display value</description>
    <inlineHelpText>timecard project/Assignment account drop down display value</inlineHelpText>
    <label>Proj assig dropdown account custom field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>