unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Project_editable_after_save_audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_editable_after_save_audit_Notes__c</fullName>
    <defaultValue>'User &lt;user&gt; changed the Project from &lt;oldproject&gt; to &lt;newproject&gt; on &lt;date&gt;'</defaultValue>
    <description>The "Assignment project editable after save" gives user access to change the project/assignment for the saved timecards but this require audit note to be set for timecard.
Audit notes can be set by this config. This config contains four tokens, which will be replaced during update.

The valid token names are as follows:-
&lt;user&gt; - the current user who is performing the action in the TC UI
&lt;date&gt; - today's date
&lt;oldproject&gt; - the original project name
&lt;newproject&gt; - the new project name

Default value:- User &lt;user&gt; changed the Project from &lt;oldproject&gt; to &lt;newproject&gt; on &lt;date&gt;.</description>
    <inlineHelpText>The "Assignment project editable after save" gives user access to change the project/assignment for the saved timecards but this require audit note to be set for timecard. Audit notes can be set by this config.</inlineHelpText>
    <label>Project editable after save audit Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>