unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Project_Task_Tooltip_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Task_Tooltip_Fieldset_Name__c</fullName>
    <description>Fields in this field set define the fields shown in the tooltip for the Project Task line in the Log a Timecard with Task Time UI.</description>
    <inlineHelpText>Fields in this field set define the fields shown in the tooltip for the Project Task line in the Log a Timecard with Task Time UI.</inlineHelpText>
    <label>Project Task Tooltip Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>