unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Restrict_Task_Based_On_Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Restrict_Task_Based_On_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the tasks that are pre-populated are based on the selected milestone. The "Limit To Tasks with Matching Milestone" field in the Select Tasks popup is then checked by default. Restrict Task Based On Milestone is deselected by default.</description>
    <inlineHelpText>When selected, the tasks that are pre-populated are based on the selected milestone. The "Limit To Tasks with Matching Milestone" field in the Select Tasks popup is then checked by default. Restrict Task Based On Milestone is deselected by default.</inlineHelpText>
    <label>Restrict Task Based On Milestone</label>
    <type>Checkbox</type>
</CustomField>