unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Save_Column_Preferences__c.field-meta.xml
<CustomField>
    <fullName>pse__Save_Column_Preferences__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected, customizations to width, order, and visibility of columns in Time Entry will be remembered per user.</inlineHelpText>
    <label>Save Column Preferences</label>
    <type>Checkbox</type>
</CustomField>