unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Schedule_assignment_tooltip_fields__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule_assignment_tooltip_fields__c</fullName>
    <defaultValue>"Percent_Allocated__c, Description__c,CreatedDate"</defaultValue>
    <description>API names of assignment fields to be shown when hovering over the tooltip icon in the Schedule section of a timecard.</description>
    <inlineHelpText>API names of assignment fields to be shown when hovering over the tooltip icon in the Schedule section of a timecard.</inlineHelpText>
    <label>Schedule Assignment Tooltip Fields</label>
    <length>60</length>
    <type>Text</type>
</CustomField>